5 stars to win, write readme